# courseworks

./: README.md
coursework_Homographies_and_Particle_Filters/: labA.ipynb  practical1A.ipynb  practical1B.ipynb  practical2A.ipynb  practical2B.ipynb
coursework_Integrated_Navigation_for_a_Robotic_Lawnmower/: COMP0130 Coursework 1 instructions 2023.docx
coursework_Integrated_Navigation_for_a_Robotic_Lawnmower/code/: DR.m  DR_B.m  DR_solution.csv  GNSS_solution.csv  GNSSresult.csv  Initialise_GNSS_KF.m  ZJA_cw1.m  ZJA_ini.m  backup.m  get_EFEC_From_GNSS.m  ws1.m  ws2_1.m  ws2_2.m  ws3_1.m  ws3_2.m  z_GNSS.m  z_GNSS_initialise.m  z_Integration.m  z_intergration_2.m
coursework_Mixtures_of_Gaussians/MoG/: playground.py  practicalMixGaussA.ipynb  practicalMixGaussB.ipynb  practicalMixGaussC.ipynb
coursework_Mixtures_of_Gaussians/MoG/.ipynb_checkpoints/: practicalMixGaussA-checkpoint.ipynb  practicalMixGaussB-checkpoint.ipynb
coursework_Mixtures_of_Gaussians/apples/: practicalMixGauss_Apples.ipynb
coursework_actuators_mechanisms_and_robot_dynamics/cw3q5/: CMakeLists.txt  setup.py
coursework_actuators_mechanisms_and_robot_dynamics/cw3q5/src/: cw3q5.py
coursework_jacobian_inverse_kinematics_path_planning/cw2q6/src/: cw2q6_node.py
coursework_linear_algebra_and_forward_kinematics/: COMP0127CW1.docx
coursework_linear_algebra_and_forward_kinematics/cw1q4/src/: cw1q4_node.py
coursework_linear_algebra_and_forward_kinematics/cw1q4_srv/: CMakeLists.txt
coursework_modelling_simulating_and_controlling_a_quadcopter/: Q1.docx
(+20 files in other folders)
